aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jne__tests__jne_lit.snap
---
source: aya-assembly/src/parser/instructions/jne.rs
expression: result
---
Instruction(
    JneLit(
        Address(
            ByteOffset {
                start: 7,
                end: 11,
            },
        ),
        HexLiteral(
            ByteOffset {
                start: 15,
                end: 19,
            },
        ),
    ),
)
