aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jne__tests__jne_lit_expr_both.snap
---
source: aya-assembly/src/parser/instructions/jne.rs
expression: result
---
Instruction(
    JneLit(
        Address(
            BinaryOp {
                lhs: HexLiteral(
                    ByteOffset {
                        start: 7,
                        end: 11,
                    },
                ),
                operator: Add,
                rhs: Register(
                    ByteOffset {
                        start: 14,
                        end: 16,
                    },
                ),
            },
        ),
        BinaryOp {
            lhs: HexLiteral(
                ByteOffset {
                    start: 21,
                    end: 25,
                },
            ),
            operator: Add,
            rhs: Register(
                ByteOffset {
                    start: 28,
                    end: 30,
                },
            ),
        },
    ),
)
