aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jne__tests__jne_lit_var.snap
---
source: aya-assembly/src/parser/instructions/jne.rs
expression: result
---
Instruction(
    JneLit(
        Address(
            HexLiteral(
                ByteOffset {
                    start: 7,
                    end: 11,
                },
            ),
        ),
        Var(
            ByteOffset {
                start: 15,
                end: 18,
            },
        ),
    ),
)
