aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jne__tests__jne_reg.snap
---
source: aya-assembly/src/parser/instructions/jne.rs
expression: result
---
Instruction(
    JneReg(
        Address(
            HexLiteral(
                ByteOffset {
                    start: 7,
                    end: 11,
                },
            ),
        ),
        Register(
            ByteOffset {
                start: 14,
                end: 16,
            },
        ),
    ),
)
